Made some refactoring.

--- a/js-client/employees.html
+++ b/js-client/employees.html
@@ -29,14 +29,15 @@
 </header>
 
 <main>
-    <div class="row">
-
-        <section>
+    <section id="headerContainer" class="header-container">
+        <div class="row">
             <h1 class="header-title">Employees</h1>
             <i class="material-icons header-button" onclick="addEmployee()" style="cursor: pointer">add</i>
-        </section>
+        </div>
+    </section>
 
-        <section id="containerForEmployees" class="scroll-area" style="overflow: auto">
+    <div class="row">
+        <section id="containerForEmployees" class="data-area" style="overflow: auto">
 
             <!--<section class="list_item">-->
 
