Changed validation method in investigation.js.

--- a/js-client/investigations.html
+++ b/js-client/investigations.html
@@ -91,14 +91,14 @@
                     <div class="form-group modal-group">
                         <label for="investigationStartDate" class="modal-label">Start date</label>
                         <i id="removeStartDateButton" class="material-icons modal_button-datetimepicker"
-                           onclick="removePickerData(INVESTIGATION_FIELD_TYPE.START_DATE, this)">cancel</i>
+                           onclick="removePickerData(this)">cancel</i>
                         <input id="investigationStartDate" class="form-control modal_input-datetimepicker" type="text">
                     </div>
 
                     <div class="form-group modal-group">
                         <label for="investigationEndDate" class="modal-label">End date</label>
                         <i id="removeEndDateButton" class="material-icons modal_button-datetimepicker"
-                           onclick="removePickerData(INVESTIGATION_FIELD_TYPE.END_DATE, this)">cancel</i>
+                           onclick="removePickerData(this)">cancel</i>
 
                         <input id="investigationEndDate" class="form-control modal_input-datetimepicker" type="text">
                     </div>
